--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="select" style="display: block;">
     <script src="scripts.js"></script>
     <h1 style="text-align: center">เลือกไพ่</h1>
-    <img class="card" src="images/cards.png" onclick="showResult()">
+    <img class="card" src="cards.png" onclick="showResult()">
   </div>
   <div id="result" style="display: none;">
     <h1 id="theSen">88</h1>
