--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>เกมดูดวง</title>
+  <title>เกมดูดวง.</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
