--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="select" style="display: block;">
     <script src="scripts.js"></script>
-    <h1 style="text-align: center">เลือกไพ่</h1>
+    <h1 style="text-align: center">เลือกไพ่.</h1>
     <img class="card" src="cards.png" onclick="showResult()">
   </div>
   <div id="result" style="display: none;">
